# AOC2021

./: .gitignore  CMakeLists.txt  LICENCE  README.md
day1/: main.cpp  puzzle1.cpp  puzzle2.cpp
day2/: solution.cpp
day3/: main.cpp  puzzle1.cpp  puzzle2.cpp
